<resources>
    <string name="app_name">Personal Assistant</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_Input_Selector">InputSelector</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="user_manual">User Manual</string>
    <string name="voice_commands">Hold for voice commands</string>
    <string name="manual_entry">Manual entry</string>
    <!-- Strings used for Input selector buttons-->
    <string name="timer">Start a timer</string>
    <string name="alarm">Set an alarm</string>
    <string name="reminder">Set a reminder</string>
    <string name="inc_brightness">Increase brightness</string>
    <string name="dec_brightness">Decrease brightness</string>
    <string name="open_app">Open an application</string>
    <string name="set_user">Set User\'s name</string>
    <string name="set_assistant">Set Activation Phrase</string>
    <string name="FFSpeech">Toggle Freeform Speech</string>
    <string name="FFOn">Freeform Speech On</string>
    <string name="FFOff">Freeform Speech Off</string>
    <string name="editConfig">Configure Settings</string>
    <string name="showUITimerChip">Show Timer screen</string>
    <string name="showUIAlarmChip">Show Alarm screen</string>

    <string name="loading">Loading Speech Recognition</string>

    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>

</resources>